2009-06-12  Felix Riemann  <friemann@svn.gnome.org>

	* plugins/exif-display/Makefile.am:
	* plugins/exif-display/eog-exif-display-plugin.c:
	* plugins/exif-display/eog-exif-display-plugin.h:
	* plugins/exif-display/exif-display-config.ui:
	* plugins/exif-display/exif-display.eog-plugin.desktop.in:
	* plugins/exif-display/exif-display.ui:
	* configure.ac:
	Add exif-display plugin by Emmanuel Touzery.

2009-05-05  Felix Riemann  <friemann@svn.gnome.org>

	* configure.ac: Make --with-plugins parameter appear nice with a list
	of the included plugins.

2009-05-05  Felix Riemann  <friemann@svn.gnome.org>

	* autogen.sh:
	* configure.ac:
	Match required build tool version in autogen.sh and configure.ac.

2009-04-27  Felix Riemann  <friemann@svn.gnome.org>

	* plugins/fit-to-width/eog-fit-to-width-plugin.c:
	* plugins/postr/eog-postr-plugin.c:
	Remove trailing whitespaces.

2009-04-27  Felix Riemann  <friemann@svn.gnome.org>

	* plugins/fit-to-width/eog-fit-to-width-plugin.c
	(eog_fit_to_width_plugin_class_init):
	Remove unused functions from fit-to-width plugin.

2009-04-27  Felix Riemann  <friemann@svn.gnome.org>

	* configure.ac:
	* plugins/fit-to-width/Makefile.am:
	* plugins/fit-to-width/eog-fit-to-width-plugin.c:
	* plugins/fit-to-width/eog-fit-to-width-plugin.h:
	* plugins/fit-to-width/fit-to-width.eog-plugin.desktop.in:
	Add fit-to-width plugin which tries to make the image width fit the
	window. Fixes bug #438642 (Javier Sánchez).

2009-04-12  Felix Riemann  <friemann@svn.gnome.org>

	* configure.ac:
	* plugins/slideshowshuffle/Makefile.am:
	* plugins/slideshowshuffle/slideshowshuffle.eog-plugin.desktop.in:
	* plugins/slideshowshuffle/slideshowshuffle.py:
	Add plugin to randomize image order during slideshows.
	Fixes bug #562135 (Johannes Marbach).

2009-02-15  Felix Riemann  <friemann@svn.gnome.org>

	* Makefile.am: Forgot to remove gnome-doc-utils from the Makefile.

2009-02-15  Felix Riemann  <friemann@svn.gnome.org>
