@@ -99,6 +99,48 @@ eog_exif_display_plugin_init (EogExifDisplayPlugin *plugin)
 {
 }
 
+/* eog_util_make_valid_utf8 is not exported so it's duped here */
+gchar *
+_eog_util_make_valid_utf8 (const gchar *str)
+{
+	GString *string;
+	const char *remainder, *invalid;
+	int remaining_bytes, valid_bytes;
+
+	string = NULL;
+	remainder = str;
+	remaining_bytes = strlen (str);
+
+	while (remaining_bytes != 0) {
+		if (g_utf8_validate (remainder, remaining_bytes, &invalid)) {
+			break;
+		}
+
+		valid_bytes = invalid - remainder;
+
+		if (string == NULL) {
+			string = g_string_sized_new (remaining_bytes);
+		}
+
+		g_string_append_len (string, remainder, valid_bytes);
+		g_string_append_c (string, '?');
+
+		remaining_bytes -= valid_bytes + 1;
+		remainder = invalid + 1;
+	}
+
+	if (string == NULL) {
+		return g_strdup (str);
+	}
+
+	g_string_append (string, remainder);
+	g_string_append (string, _(" (invalid Unicode)"));
+
+	g_assert (g_utf8_validate (string->str, -1, NULL));
+
+	return g_string_free (string, FALSE);
+}
+
 /* stolen from eog-properties-dialog.c*/
 static void
 eog_exif_set_label (GtkWidget *w, ExifData *exif_data, gint tag_id)
@@ -114,7 +156,7 @@ eog_exif_set_label (GtkWidget *w, ExifData *exif_data, gint tag_id)
 		if (tag_id == EXIF_TAG_DATE_TIME_ORIGINAL && buf_ptr)
 			label_text = eog_exif_util_format_date (buf_ptr);
 		else
-			label_text = eog_util_make_valid_utf8 (buf_ptr);
+			label_text = _eog_util_make_valid_utf8 (buf_ptr);
 	}
 
 	gtk_label_set_text (GTK_LABEL (w), label_text);
